# gym_pacman

./: setup.cfg  setup.py
example/: pacman_env.py
gym_pacman/: __init__.py  game.py  ghostAgents.py  graphicsUtils.py  gym_interface.py  layout.py  pacman.py
gym_pacman/layouts/: santa_fe.lay
