[metadata]
name = gym_pacman
version = attr: gym_pacman.VERSION
description = A gym interface for pacman.
long_description = file: README.rst
keywords = pacman, gym, reinforcement learning
license =
classifiers =
    Programming Language :: Python :: 3
author = UC Berkeley

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
  gym_pacman/pacman.py

[options.package_data]
* = *.txt, *.rst, layouts/*.lay

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3

